--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "files": [
     "schema",
-    "mock_data"
+    "mock_data",
+    "lib"
   ],
   "repository": {
     "type": "git",
@@ -31,7 +32,10 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "eslint": "eslint .",
+    "clean": "rimraf lib",
+    "eslint": "eslint scripts --ext .js",
+    "zipSchema": "node scripts/zipSchema2lib",
+    "zip": "npm-run-all -s clean zipSchema",
     "json5": "node json5"
   },
   "homepage": "https://github.com/navikt/melosys-schema#readme",
@@ -39,6 +43,11 @@
     "json5": "^2.1.0"
   },
   "devDependencies": {
-    "ajv": "^6.10.0"
+    "ajv": "^6.10.0",
+    "eslint": "^5.15.3",
+    "eslint-plugin-node": "^8.0.1",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.3",
+    "zip-dir": "^1.0.2"
   }
 }
