--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "eslint": "eslint .",
+    "clean": "rimraf lib",
+    "eslint": "eslint scripts --ext .js",
+    "zipSchema": "node scripts/zipSchema2lib",
+    "zip": "npm-run-all -s clean zipSchema",
     "json5": "node json5"
   },
   "homepage": "https://github.com/navikt/melosys-schema#readme",
@@ -39,6 +42,11 @@
     "json5": "^2.1.0"
   },
   "devDependencies": {
-    "ajv": "^6.10.0"
+    "ajv": "^6.10.0",
+    "eslint": "^5.15.3",
+    "eslint-plugin-node": "^8.0.1",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.3",
+    "zip-dir": "^1.0.2"
   }
 }
