MELOSYS-2423 export scripts dir in package.json.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "MelosSys Schema Mock data",
   "main": "index.js",
   "files": [
+    "mock_data",
     "schema",
-    "mock_data"
+    "scripts"
   ],
   "repository": {
     "type": "git",
