--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "json5": "^2.1.0"
   },
   "devDependencies": {
-    "ajv": "^6.10.0",
-    "eslint": "^5.15.3",
-    "eslint-plugin-node": "^8.0.1",
+    "ajv": "^6.10.2",
+    "eslint": "^6.0.1",
+    "eslint-plugin-node": "^9.1.0",
+    "lodash": "^4.17.14",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.3",
     "zip-dir": "^1.0.2"
