--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "scripts": {
     "clean": "rimraf lib",
+    "schema": "node scripts/schema",
+    "schema:dbg": "node $NODE_DEBUG_OPTION scripts/schema",
     "eslint": "eslint scripts --ext .js",
     "zipSchema": "node scripts/zipSchema2lib",
     "zip": "npm-run-all -s clean zipSchema",
@@ -44,9 +46,14 @@
   },
   "devDependencies": {
     "ajv": "^6.10.2",
+    "colors": "^1.3.3",
     "eslint": "^6.0.1",
     "eslint-plugin-node": "^9.1.0",
+    "get-installed-path": "^4.0.8",
+    "jsonpath-plus": "^0.20.1",
     "lodash": "^4.17.14",
+    "log4js": "^4.5.1",
+    "node-emoji": "^1.10.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.3",
     "zip-dir": "^1.0.2"
