--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "eslint": "eslint scripts --ext .js",
     "zipSchema": "node scripts/zipSchema2lib",
     "zip": "npm-run-all -s clean zipSchema",
-    "json5": "node json5",
-    "schema": "node scripts/schema"
+    "json5": "node json5"
   },
   "homepage": "https://github.com/navikt/melosys-schema#readme",
   "dependencies": {
