--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "eslint": "eslint scripts --ext .js",
     "zipSchema": "node scripts/zipSchema2lib",
     "zip": "npm-run-all -s clean zipSchema",
-    "json5": "node json5"
+    "json5": "node json5",
+    "test": "mocha --reporter spec"
   },
   "homepage": "https://github.com/navikt/melosys-schema#readme",
   "dependencies": {
@@ -46,12 +47,14 @@
   },
   "devDependencies": {
     "ajv": "^6.10.2",
+    "chai": "^4.2.0",
     "colors": "^1.3.3",
     "eslint": "^6.0.1",
     "eslint-plugin-node": "^9.1.0",
     "jsonpath-plus": "^0.20.1",
     "lodash": "^4.17.14",
     "log4js": "^4.5.1",
+    "mocha": "^6.2.0",
     "node-emoji": "^1.10.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.3",
