Oppdater mock-data

--- a/mock_data/fagsaker-opprett/post/fagsaker-opprett-post.json5
+++ b/mock_data/fagsaker-opprett/post/fagsaker-opprett-post.json5
@@ -7,7 +7,7 @@
         fom: "2014-03-12",
         tom: "2015-03-12"
       },
-      "land": "NO"
+      "land": ["NO"]
     },
     "skalTilordnes": true
 }
