Endrer mock-data for husnummer og gatenummer

--- a/mock_data/behandlinger/behandling-bid-8.json5
+++ b/mock_data/behandlinger/behandling-bid-8.json5
@@ -32,8 +32,8 @@
           "bostedsadresse": {
             "gateadresse": {
               "gatenavn": "Waldemar Thranses gate",
-              "gatenummer": 98,
-              "husnummer": null,
+              "gatenummer": 101098,
+              "husnummer": 98,
               "husbokstav": "C"
             },
             "postnr": "0175",
@@ -52,8 +52,8 @@
           "bostedsadresse": {
             "gateadresse": {
               "gatenavn": "Waldemar Thranses gate",
-              "gatenummer": 98,
-              "husnummer": null,
+              "gatenummer": 101098,
+              "husnummer": 98,
               "husbokstav": "C"
             },
             "postnr": "0175",
@@ -72,8 +72,8 @@
           "bostedsadresse": {
             "gateadresse": {
               "gatenavn": "Waldemar Thranses gate",
-              "gatenummer": 98,
-              "husnummer": null,
+              "gatenummer": 101098,
+              "husnummer": 98,
               "husbokstav": "C"
             },
             "postnr": "0175",
