--- a/mock_data/behandlinger/behandling-bid-4.json5
+++ b/mock_data/behandlinger/behandling-bid-4.json5
@@ -641,8 +641,8 @@
           "bostedsadresse": {
             "gateadresse": {
               "gatenavn": "Waldemar Thranses gate",
-              "gatenummer": 98,
-              "husnummer": null,
+              "gatenummer": 101098,
+              "husnummer": 98,
               "husbokstav": "C"
             },
             "postnr": "0175",
@@ -661,8 +661,8 @@
           "bostedsadresse": {
             "gateadresse": {
               "gatenavn": "Waldemar Thranses gate",
-              "gatenummer": 98,
-              "husnummer": null,
+              "gatenummer": 101098,
+              "husnummer": 98,
               "husbokstav": "C"
             },
             "postnr": "0175",
@@ -681,8 +681,8 @@
           "bostedsadresse": {
             "gateadresse": {
               "gatenavn": "Waldemar Thranses gate",
-              "gatenummer": 98,
-              "husnummer": null,
+              "gatenummer": 101098,
+              "husnummer": 98,
               "husbokstav": "C"
             },
             "postnr": "0175",
