--- a/mock_data/behandlinger/behandling-bid-9.json5
+++ b/mock_data/behandlinger/behandling-bid-9.json5
@@ -57,8 +57,8 @@
           "bostedsadresse": {
             "gateadresse": {
               "gatenavn": "Waldemar Thranses gate",
-              "gatenummer": 98,
-              "husnummer": null,
+              "gatenummer": 101098,
+              "husnummer": 98,
               "husbokstav": "C"
             },
             "postnr": "0175",
@@ -77,8 +77,8 @@
           "bostedsadresse": {
             "gateadresse": {
               "gatenavn": "Waldemar Thranses gate",
-              "gatenummer": 98,
-              "husnummer": null,
+              "gatenummer": 101098,
+              "husnummer": 98,
               "husbokstav": "C"
             },
             "postnr": "0175",
@@ -97,8 +97,8 @@
           "bostedsadresse": {
             "gateadresse": {
               "gatenavn": "Waldemar Thranses gate",
-              "gatenummer": 98,
-              "husnummer": null,
+              "gatenummer": 101098,
+              "husnummer": 98,
               "husbokstav": "C"
             },
             "postnr": "0175",
