--- a/mock_data/soknader/soknad-bid-4.json5
+++ b/mock_data/soknader/soknad-bid-4.json5
@@ -216,7 +216,7 @@
         "bostedsadresse" : {
           "gateadresse": {
             "gatenavn": "Waldemar Thranses gate",
-            "gatenummer": 98,
+            "gatenummer": 101098,
             "husnummer": null,
             "husbokstav": "C"
           },
@@ -251,8 +251,8 @@
         "bostedsadresse" : {
           "gateadresse": {
             "gatenavn": "Waldemar Thranses gate",
-            "gatenummer": 98,
-            "husnummer": null,
+            "gatenummer": 101098,
+            "husnummer": 98,
             "husbokstav": "C"
           },
           "postnr": "0175",
