Legg til svarfrist for behandling under oppgave-oversikt

--- a/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
+++ b/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
@@ -53,7 +53,8 @@
         },
         "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
         "erUnderOppdatering": false,
-        "registrertDato": "2018-12-11T16:30:00.622Z"
+        "registrertDato": "2018-12-11T16:30:00.622Z",
+        "svarFrist": "2019-12-11T16:30:00.622Z"
       },
       "aktivTil": "2018-01-28",
       "periode": {
@@ -86,7 +87,8 @@
         },
         "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
         "erUnderOppdatering": false,
-        "registrertDato": "2018-12-11T16:30:00.622Z"
+        "registrertDato": "2018-12-11T16:30:00.622Z",
+        "svarFrist": "2019-12-11T16:30:00.622Z"
       },
       "aktivTil": "2016-03-22",
       "periode": {
@@ -119,7 +121,8 @@
         },
         "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
         "erUnderOppdatering": false,
-        "registrertDato": "2018-12-11T16:30:00.622Z"
+        "registrertDato": "2018-12-11T16:30:00.622Z",
+        "svarFrist": "2019-12-11T16:30:00.622Z"
       },
       "aktivTil": "2016-03-03",
       "periode": {
@@ -152,7 +155,8 @@
         },
         "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
         "erUnderOppdatering": false,
-        "registrertDato": "2018-12-11T16:30:00.622Z"
+        "registrertDato": "2018-12-11T16:30:00.622Z",
+        "svarFrist": "2019-12-11T16:30:00.622Z"
       },
       "aktivTil": "2016-03-23",
       "periode": {
@@ -185,7 +189,8 @@
         },
         "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
         "erUnderOppdatering": false,
-        "registrertDato": "2018-12-11T16:30:00.622Z"
+        "registrertDato": "2018-12-11T16:30:00.622Z",
+        "svarFrist": "2019-12-11T16:30:00.622Z"
       },
       "aktivTil": "2018-01-28",
       "periode": {
