--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "melosys-schema",
+  "name": "@navikt/melosys-schema",
   "version": "1.34.0",
   "description": "MelosSys Schema Mock data",
   "main": "index.js",
@@ -22,7 +22,8 @@
     "email": "are.bjolseth@nav.no"
   },
   "publishConfig": {
-    "acccess": "public"
+    "acccess": "public",
+    "registry": "https://npm.pkg.github.com/"
   },
   "license": "ISC",
   "bugs": {
