--- a/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
+++ b/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
@@ -51,7 +51,7 @@
           "kode": "UBEH",
           "term": "Under behandling"
         },
-        "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
+        "endretDato": "2018-08-10T15:00:00.622Z",
         "erUnderOppdatering": false,
         "registrertDato": "2018-12-11T16:30:00.622Z",
         "svarFrist": "2019-12-11T16:30:00.622Z"
@@ -85,7 +85,7 @@
           "kode": "OPPRETTET",
           "term": "Opprettet"
         },
-        "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
+        "endretDato": "2018-08-10T15:00:00.622Z",
         "erUnderOppdatering": false,
         "registrertDato": "2018-12-11T16:30:00.622Z",
         "svarFrist": "2019-12-11T16:30:00.622Z"
@@ -119,7 +119,7 @@
           "kode": "FORL",
           "term": "Foreløpig lovvalg"
         },
-        "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
+        "endretDato": "2018-08-10T15:00:00.622Z",
         "erUnderOppdatering": false,
         "registrertDato": "2018-12-11T16:30:00.622Z",
         "svarFrist": "2019-12-11T16:30:00.622Z"
@@ -153,7 +153,7 @@
           "kode": "UBEH",
           "term": "Under behandling"
         },
-        "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
+        "endretDato": "2018-08-10T15:00:00.622Z",
         "erUnderOppdatering": false,
         "registrertDato": "2018-12-11T16:30:00.622Z",
         "svarFrist": "2019-12-11T16:30:00.622Z"
@@ -187,7 +187,7 @@
           "kode": "UBEH",
           "term": "Under behandling"
         },
-        "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
+        "endretDato": "2018-08-10T15:00:00.622Z",
         "erUnderOppdatering": false,
         "registrertDato": "2018-12-11T16:30:00.622Z",
         "svarFrist": "2019-12-11T16:30:00.622Z"
