--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
 
     steps:
       - name: Checkout
@@ -25,14 +26,12 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.3.1'
-          # NPM må vite hvor github packages ligger
           registry-url: https://npm.pkg.github.com/
           scope: '@navikt'
 
       - name: npm install
         run: npm i
         env:
-          # NPM krever tydeligvis en token for å hente pakker fra github packages
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
       - name: test
@@ -43,13 +42,13 @@ jobs:
           git config --global user.email "actions-melosys@nav.no"
           git config --global user.name "Actions"
           COMMIT_MESSAGE=`git log -1 --pretty=%B`
-          npm version patch -m "%s, $COMMIT_MESSAGE"
+          npm version patch -m "%s, $COMMIT_MESSAGE, [skip ci]"
 
       - name: Push changes to repository
         uses: ad-m/github-push-action@v0.5.0
         with:
           branch: master
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.MELOSYS_CI_TOKEN }}
 
       - name: publish to GPR
         run: npm publish
