--- a/mock_data/journalforing-tilordne/post/tilordne-post.json5
+++ b/mock_data/journalforing-tilordne/post/tilordne-post.json5
@@ -17,5 +17,6 @@
     }
   ],
   "skalTilordnes": false,
-  "ikkeSendForvaltingsmelding": null
+  "ikkeSendForvaltingsmelding": null,
+  "mottattDato": "2018-01-01"
 }
