Fikser feilende tester

--- a/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
+++ b/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
@@ -221,14 +221,15 @@
           "kode": "UNDER_BEHANDLING",
           "term": "Under behandling"
         },
-        "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
+        "endretDato": "2018-08-10T15:00:00.622Z",
         "erUnderOppdatering": false,
-        "registrertDato": "2018-12-11T16:30:00.622Z"
+        "registrertDato": "2018-12-11T16:30:00.622Z",
+        "svarFrist": "2019-12-11T16:30:00.622Z"
       },
       "aktivTil": "2018-01-28",
       "periode": {
-        "fom": "21-12-2020",
-        "tom": "21-12-2021"
+        "fom": "2016-05-12",
+        "tom": "2018-01-01"
       },
       "prioritet": "HOY",
       "land": [],
