--- a/mock_data/journalforing-opprett/post/opprett-post.json5
+++ b/mock_data/journalforing-opprett/post/opprett-post.json5
@@ -4,7 +4,7 @@
   "representantID": "",
   "behandlingstypeKode": "SOEKNAD",
   "representantKontaktPerson": null,
-  "fullmektigRepresenterer": "BRUKER",
+  "representantRepresenterer": "BRUKER",
   "avsenderID": "30098000492",
   "avsenderNavn": "HEST LILLA",
   "dokumentID": "Dok_ID",
