--- a/mock_data/utpekingsperioder/utpekingsperioder-bid-4.json5
+++ b/mock_data/utpekingsperioder/utpekingsperioder-bid-4.json5
@@ -1,1 +1,3 @@
-{"utpekingsperioder":[{"fomDato":"2018-01-02","tomDato":"2019-01-02","lovvalgsbestemmelse":"FO_883_2004_ART13_1B2","tilleggBestemmelse":null,"lovvalgsland":"CY"}]}
+{
+  "utpekingsperioder": []
+}
