utpekingsperiode: tilleggBestemmelse -> tilleggsbestemmelse

--- a/mock_data/utpekingsperioder/post/utpekingsperioder.json5
+++ b/mock_data/utpekingsperioder/post/utpekingsperioder.json5
@@ -5,7 +5,7 @@
       "tomDato": "2020-01-01",
       "lovvalgsbestemmelse": "ART12_1",
       "lovvalgsland": "NO",
-      "tilleggBestemmelse": "FO_883_2004_ART13_4"
+      "tilleggsbestemmelse": "FO_883_2004_ART13_4"
     }
   ]
 }
