Kan sende flere mottakerinstitusjoner ved fatting av vedtak

--- a/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-post.json5
+++ b/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-post.json5
@@ -1,7 +1,7 @@
 {
   "behandlingsresultatTypeKode": "FASTSATT_LOVVALGSLAND",
   "fritekst": "Fritekst",
-  "mottakerinstitusjon": "NO:NAVT003",
+  "mottakerinstitusjoner": ["NO:NAVT003"],
   "revurderBegrunnelse": "Begrunnelse",
   "vedtakstype": "KORRIGERT_VEDTAK"
 }
