--- a/mock_data/journalforing-tilordne/post/tilordne-post.json5
+++ b/mock_data/journalforing-tilordne/post/tilordne-post.json5
@@ -5,15 +5,24 @@
   "avsenderNavn": "PEN FUL",
   "behandlingstypeKode": "KLAGE",
   "brukerID": "30098000492",
-  "dokumentID": "Dok_ID",
-  "hoveddokumentTittel": "Søknad om medlemskap",
   "ingenVurdering": false,
   "journalpostID": "DOK_321",
   "oppgaveID": "177057928",
+  "hoveddokument": {
+    "dokumentID": "Dok_ID",
+    "tittel": "Søknad om medlemskap",
+    "logiskeVedlegg": [
+      {
+        "dokumentID": null,
+        "tittel": "Logisk vedlegg 1"
+      }
+    ]
+  },
   "vedlegg": [
     {
       "dokumentID": null,
-      "tittel": "Vedleggstittel 1"
+      "tittel": "Vedleggstittel 1",
+      "logiskeVedlegg": []
     }
   ],
   "skalTilordnes": false,
