--- a/mock_data/journalforing-tilordne/post/tilordne-post.json5
+++ b/mock_data/journalforing-tilordne/post/tilordne-post.json5
@@ -12,15 +12,13 @@
     "dokumentID": "Dok_ID",
     "tittel": "Søknad om medlemskap",
     "logiskeVedlegg": [
-      {
-        "dokumentID": null,
-        "tittel": "Logisk vedlegg 1"
-      }
+      "Logisk vedlegg 1",
+      "Logisk vedlegg 2"
     ]
   },
   "vedlegg": [
     {
-      "dokumentID": null,
+      "dokumentID": "123",
       "tittel": "Vedleggstittel 1",
       "logiskeVedlegg": []
     }
