--- a/mock_data/journalforing/DOK_9998.json5
+++ b/mock_data/journalforing/DOK_9998.json5
@@ -9,14 +9,8 @@
     "dokumentID": "73726173",
     "tittel": "Søknad om A1 -  Avklaring av trygdetilhørighet ved yrkesaktivitet innen EØS/Sveits",
     "logiskeVedlegg": [
-      {
-        "dokumentID": "1234532",
-        "tittel": "Logisk vedlegg 1"
-      },
-      {
-        "dokumentID": null,
-        "tittel": "Logisk vedlegg 2"
-      }
+      "Logisk vedlegg 1",
+      "Logisk vedlegg 2"
     ]
   },
   "vedlegg": [
@@ -24,10 +18,7 @@
       "tittel": "Skjema for arbeidsgiver som sender arbeidstaker elller frilanser på midlertidig oppdrag i EØS/Sveits",
       "dokumentID": "123",
       "logiskeVedlegg": [
-        {
-          "dokumentID": null,
-          "tittel": "Logisk vedlegg 1"
-        }
+        "Logisk vedlegg 1"
       ]
     },
     {
