--- a/mock_data/behandlinger-resultat/behandlingsresultat-bid-14.json5
+++ b/mock_data/behandlinger-resultat/behandlingsresultat-bid-14.json5
@@ -2,6 +2,7 @@
   "begrunnelseKoder" : [ "OPPHOLD_UTL_AVLYST" ],
   "begrunnelseFritekst" : null,
   "behandlingsresultatTypeKode": "IKKE_FASTSATT",
+  "kontrollBegrunnelseKoder": ["OVERLAPPENDE_MEDL_PERIODER"],
   "utfallRegistreringUnntak": null,
   "vedtakstype": "FØRSTEGANGSVEDTAK"
 }
