--- a/mock_data/behandlinger-resultat/behandlingsresultat-bid-5.json5
+++ b/mock_data/behandlinger-resultat/behandlingsresultat-bid-5.json5
@@ -2,6 +2,7 @@
   "begrunnelseKoder" : [],
   "begrunnelseFritekst" : null,
   "behandlingsresultatTypeKode": "IKKE_FASTSATT",
+  "kontrollBegrunnelseKoder": [],
   "utfallRegistreringUnntak": null,
   "vedtakstype": "FØRSTEGANGSVEDTAK"
 }
