--- a/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
+++ b/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
@@ -1,6 +1,5 @@
 {
-  "behandlingID" : 4,
-  "soeknadDokument" : {
+  "data" : {
     "bosted" : {
       "intensjonOmRetur" : true,
       "antallMaanederINorge" : 8,
