--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-6.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-6.json5
@@ -1,8 +1,7 @@
 {
-  "behandlingID": 7,
-  "soeknadDokument": {
+  "data": {
     "personOpplysninger": {
-      "utenlandskIdent": [{"ident": "38288D-A", "landkode": "IT"}],
+      "utenlandskIdent": [],
       "medfolgendeFamilie": [],
       "medfolgendeAndre": null
     },
@@ -17,11 +16,11 @@
       },
       "foretakNavn": "EQUINOR",
       "foretakOrgnr": "372384726",
-      "arbeidUtlandHjemmekontor": true
+      "arbeidUtlandHjemmekontor": false
     }],
     "foretakUtland": [],
     "oppholdUtland": {
-      "oppholdslandkoder": ["FR"],
+      "oppholdslandkoder": ["SE"],
       "oppholdsPeriode": {
         "fom": "2018-01-01",
         "tom": "2019-05-31"
@@ -34,12 +33,12 @@
       "intensjonOmRetur": true,
       "antallMaanederINorge": 8,
       "oppgittAdresse": {
-        "gatenavn": null,
-        "husnummer": null,
+        "gatenavn": "Waldemar Thranes gate",
+        "husnummer": "98",
         "region": null,
-        "postnummer": null,
-        "poststed": null,
-        "landkode": null
+        "postnummer": "O175",
+        "poststed": "Oslo",
+        "landkode": "NO"
       }
     },
     "arbeidNorge": {
@@ -72,29 +71,29 @@
       "ekstraArbeidsgivere": []
     },
     "arbeidsinntekt": {
-      "inntektNorskIPerioden": 20000,
-      "inntektUtenlandskIPerioden": 32334,
-      "inntektNaeringIPerioden": 0,
+      "inntektNorskIPerioden": null,
+      "inntektUtenlandskIPerioden": null,
+      "inntektNaeringIPerioden": null,
       "inntektNaturalytelser": {
-        "friBolig": true,
-        "friBil": null,
-        "friAnnet": null
+        "friBolig": false,
+        "friBil": false,
+        "friAnnet": "Fri bruk av bedriftens vaskekluter"
       },
       "inntektErInnrapporteringspliktig": null,
       "inntektTrygdeavgiftBlirTrukket": null
     },
     "arbeidsgiversBekreftelse": {
-      "arbeidsgiverBekrefterUtsendelse": true,
-      "arbeidstakerAnsattUnderUtsendelsen": true,
-      "erstatterArbeidstakerenUtsendte": true,
-      "arbeidstakerTidligereUtsendt24Mnd": true,
-      "arbeidsgiverBetalerArbeidsgiveravgift": true,
-      "trygdeavgiftTrukketGjennomSkatt": true,
-      "trygdeavgiftTrukketGjennomSkattDato": "2018-06-01"
+      "arbeidsgiverBekrefterUtsendelse": null,
+      "arbeidstakerAnsattUnderUtsendelsen": null,
+      "erstatterArbeidstakerenUtsendte": null,
+      "arbeidstakerTidligereUtsendt24Mnd": null,
+      "arbeidsgiverBetalerArbeidsgiveravgift": null,
+      "trygdeavgiftTrukketGjennomSkatt": null,
+      "trygdeavgiftTrukketGjennomSkattDato": null
     },
     "maritimtArbeid": [],
     "soeknadsland": {
-      "landkoder": ["FR"]
+      "landkoder": ["SE"]
     },
     "periode": {
       "fom": "2018-01-02",
@@ -103,6 +102,6 @@
   },
   "tilleggsData": {
     "organisasjoner": [],
-    "personer": []
-  }
+  },
+  "type": "SØKNAD",
 }
