Endrer behandlingstyper for Norge/utlandet utpekt

--- a/mock_data/behandlinger/behandling-bid-14.json5
+++ b/mock_data/behandlinger/behandling-bid-14.json5
@@ -807,7 +807,7 @@
     "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
     "endretDato": "2018-08-27T07:16:03.273Z",
     "behandlingstype": {
-      "kode": "UTL_MYND_UTPEKT_NORGE",
+      "kode": "BESLUTNING_LOVVALG_NORGE",
       "term": "Norge er utpekt (A003)"
     }
   }
