Behandlingstype.term var ikke oppdatert

--- a/mock_data/behandlinger/behandling-bid-14.json5
+++ b/mock_data/behandlinger/behandling-bid-14.json5
@@ -808,7 +808,7 @@
     "endretDato": "2018-08-27T07:16:03.273Z",
     "behandlingstype": {
       "kode": "BESLUTNING_LOVVALG_NORGE",
-      "term": "Norge er utpekt (A003)"
+      "term": "Behandling av at utenlandske myndigheter har utpekt Norge som lovvalgsland (A003)"
     }
   }
 }
