Sender overgangsregelbestemmelser som kodeverk

--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-18.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-18.json5
@@ -1,8 +1,14 @@
 {
   "data": {
     "overgangsregelbestemmelser": [
-      "FO_1408_1971_ART14_2_A",
-      "FO_1408_1971_ART14_2_B"
+      {
+        "kode": "FO_1408_1971_ART14_2_A",
+        "term": "Rfo. 1408/1971 artikkel 14 nr. 2 bokstav a"
+      },
+      {
+        "kode": "FO_1408_1971_ART14_2_B",
+        "term": "Rfo. 1408/1971 artikkel 14 nr. 2 bokstav b"
+      }
     ],
     "norskeArbeidsgivere": [],
     "ytterligereInformasjon": "fritekst",
